Included content of missing style file in class definition

--- a/Documentation/manual.tex
+++ b/Documentation/manual.tex
@@ -279,7 +279,7 @@
         \subsection{Rectangular multiparameter eigenvalue problems}
 
             Similarly, a rectangular multiparameter eigenvalue problem can be represented by a cell array that contains all the coefficient matrices and a matrix that describes the monomial that belongs to each coefficient matrix.
-            For example, the linear two-parameter eigenvalue problem $\calmat{M} \left( \vc{\lambda} \right) \vc{z} = \left( A_{00} + A_{10} \lambda_1 + A_{01} \lambda_2 \right) \vc{z} = \vc{0}$ has three coefficient matrices.
+            For example, the linear two-parameter eigenvalue problem $\mcl{M} \left( \vc{\lambda} \right) \vc{z} = \left( A_{00} + A_{10} \lambda_1 + A_{01} \lambda_2 \right) \vc{z} = \vc{0}$ has three coefficient matrices.
             This cell array and the support are then given to the \function{mepstruct} constructor.
             %
             \begin{code}
